--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,12 @@
 		{
 			"type": "hxml",
 			"file": "client.hxml",
+			"problemMatcher": [
+				"$haxe-absolute",
+				"$haxe",
+				"$haxe-error",
+				"$haxe-trace"
+			],
 			"group": {
 				"kind": "build",
 				"isDefault": true
